--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="card__footer">
           <img
             class="card__footerAvatar"
-            src="/images/avatar-michelle.jpg"
+            src="images/avatar-michelle.jpg"
             alt="profile"
           />
           <div class="card__footerInfo">
